--- a/client/package.json
+++ b/client/package.json
@@ -1,24 +1,16 @@
 {
-  "name": "drex-frontend",
-  "proxy": "http://localhost:5000",
+  "name": "client",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@chakra-ui/react": "^2.5.2",
-    "@emotion/react": "^11.10.6",
-    "@emotion/styled": "^11.10.6",
-    "@supabase/supabase-js": "^2.11.0",
+    "@supabase/supabase-js": "^2.12.0",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^13.0.0",
     "@testing-library/user-event": "^13.2.1",
-    "axios": "^1.3.4",
-    "bootstrap": "^5.2.3",
-    "framer-motion": "^10.6.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^5.3.4",
     "react-scripts": "5.0.1",
-    "validator": "^13.9.0",
     "web-vitals": "^2.1.0"
   },
   "scripts": {
